# aoc

./: Cargo.toml  README.md  build.rs
2023/src/: day1.rs  day1.s  day2.s  day6.s  day8.rs  day8_unused.s  lib.rs
aoc2024/: Cargo.toml  README.md  build.rs
aoc2024/src/: day1.S  day1.rs  lib.rs  scratch.S
aoc2025/: Cargo.toml
aoc2025/.cargo/: config.toml
aoc2025/benches/: days.rs
aoc2025/src/: day1.rs  day2.rs  day3.rs  lib.rs
benches/: day1.rs  rust_asm.rs
src/: day2.rs  day6.rs  day6_p2.s  day8.rs  day8.s  lib.rs
