[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
prctl = "1.0.0"
pyo3 = {version = "0.21.2", features = ["auto-initialize"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[build-dependencies]
cc = "1"

[[bench]]
name = "rust_asm"
harness = false
